base/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "backend-ingress"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /contents/*
            backend:
              serviceName: "demo-flask-backend"
              servicePort: 8080
          - path: /services/*
            backend:
              serviceName: "demo-nodejs-backend"
              servicePort: 8080
          - path: /*
            backend:
              serviceName: "demo-frontend"
              servicePort: 80
